Created page with "[[File:FCCircularText 19.png|left]] * '''Radius of support''' : Wenn ein Wert angegeben wird, wird Unterstützung erstellt (Standardwert 0). * If '''Support number face''' unterscheidet sich von Null, wird eine Stütze erstellt. (Wenn '''Extrude support '''= Null ist, wird eine Fläche erstellt). ** 1 = Ein Kreis wird erstellt (Kreis erscheint). ** 2 = Es wird ein Rechteck erstellt (Länge = (Radius des Mediums * 1,5) Breite = Radius der Stütze) (Rechteck wird angezeigt..."

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -392,18 +392,16 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <li>Die Schaltfl&auml;chen <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Stand</span> oder <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Mode Flat</span>.</li></ol></li>
 <li>Der Bereich <b>Clock</b> (Uhr) wird aktiviert.</li></ul>
 <div style="clear:both"></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_19.png&amp;filetimestamp=20200601140458&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_19.png" decoding="async" width="501" height="131" class="mw-file-element" data-file-width="501" data-file-height="131"></a><figcaption></figcaption></figure>
-<ul><li><b>Radius of support</b>&nbsp;: If a value is given, support will be created (default 0).</li>
-<li>If <b>Support number face</b> is different from zero a support is created. (If <b>Extrude support </b>= zero then a face is created).
-<ul><li>1 = A circle is created (circle appears).</li>
-<li>2 = A rectangle is created (length = (Radius of media * 1.5) width = Radius of support) (Rectangle appears).</li>
-<li>3 = A triangle is created (circumscribed) (Triangle appears).</li>
-<li>4 = A square is created (Radius of support) (Square appears).</li>
-<li>5 = A polygon with the number of faces displayed (circumscribed) (Polygon appears).</li></ul></li>
-<li><b>Extrude support</b> is activated and an extrusion dimension can be given.</li></ul>
+<ul><li><b>Radius of support</b>&nbsp;: Wenn ein Wert angegeben wird, wird Unterst&uuml;tzung erstellt (Standardwert 0).</li>
+<li>If <b>Support number face</b> unterscheidet sich von Null, wird eine St&uuml;tze erstellt. (Wenn <b>Extrude support </b>= Null ist, wird eine Fl&auml;che erstellt).
+<ul><li>1 = Ein Kreis wird erstellt (Kreis erscheint).</li>
+<li>2 = Es wird ein Rechteck erstellt (L&auml;nge = (Radius des Mediums * 1,5) Breite = Radius der St&uuml;tze) (Rechteck wird angezeigt).</li>
+<li>3 = Ein Dreieck wird erstellt (umschrieben) (Dreieck erscheint).</li>
+<li>4 = Ein Quadrat wird erstellt (Radius der Unterst&uuml;tzung) (Quadrat erscheint).</li>
+<li>5 = Ein Polygon mit der angezeigten Anzahl von Fl&auml;chen (umschrieben) (Polygon wird angezeigt).</li></ul></li>
+<li>Die Funktion &bdquo;Extrudieren&ldquo; ist aktiviert und es kann eine Extrusionsabmessung angegeben werden.</li></ul>
 <div style="clear:both"></div>
-</div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_18.png&amp;filetimestamp=20200601150838&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_18.png" decoding="async" width="490" height="127" class="mw-file-element" data-file-width="490" data-file-height="127"></a><figcaption></figcaption></figure><p><span typeof="mw:File"><a href="../index.php?title=FCCircularText_38.png&amp;filetimestamp=20141124203549&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_38.png" decoding="async" width="200" height="132" class="mw-file-element" data-file-width="667" data-file-height="440"></a></span>
 </p><div style="clear:both"></div>
 <figure class="mw-default-size mw-halign-left" typeof="mw:File"><a href="../index.php?title=FCCircularText_17.png&amp;filetimestamp=20200601150530&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_17.png" decoding="async" width="492" height="131" class="mw-file-element" data-file-width="492" data-file-height="131"></a><figcaption></figcaption></figure><p><span typeof="mw:File"><a href="../index.php?title=FCCircularText_37.png&amp;filetimestamp=20141124203510&amp;.html" class="mw-file-description"><img src="../File/FCCircularText_37.png" decoding="async" width="200" height="128" class="mw-file-element" data-file-width="720" data-file-height="462"></a></span>
@@ -960,13 +958,13 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119070454
+Cached time: 20260120051338
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.356 seconds
-Real time usage: 0.458 seconds
-Preprocessor visited node count: 1589/1000000
+CPU time usage: 0.387 seconds
+Real time usage: 0.641 seconds
+Preprocessor visited node count: 1588/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
@@ -976,19 +974,19 @@ Unstrip post&#8208;expand size: 66671/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  266.651      1 -total
-  2.64%    7.028      1 Template:Draft_Tools_navi/de
-  1.76%    4.686     18 Template:FALSE
-  1.35%    3.592      7 Template:RadioButton
-  1.31%    3.486     10 Template:CheckBox
-  1.24%    3.319     10 Template:Code
-  1.19%    3.166      1 Template:Macro/de
-  1.13%    3.009      3 Template:ColoredText
-  1.11%    2.967      2 Template:Navigation_menu_2
-  1.00%    2.669      1 Template:Caption
+100.00%  402.918      1 -total
+  2.33%    9.406      1 Template:Draft_Tools_navi/de
+  1.50%    6.049      7 Template:RadioButton
+  1.27%    5.100     10 Template:CheckBox
+  1.22%    4.914     10 Template:Code
+  1.11%    4.486      3 Template:ColoredText
+  1.00%    4.023      1 Template:Macro/de
+  0.96%    3.862     19 Template:Clear
+  0.88%    3.564      1 Template:Caption
+  0.87%    3.498      2 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260119070454 and revision id 1740929. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260120051337 and revision id 1741481. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
