Created page with "<br /> <center> <gallery widths="300" heights="200"> Image:FCCircularText 42.png|Ring Innenkurve mit Subtraktion. Image:FCCircularText 61.png|Drehpunkt 0°, 90° usw. </gallery> </center> <br /> <center> <gallery widths="300" heights="200"> Image:FCCircularText_Path_00_002_000.png| {{CheckBox|TRUE|Word}} Der Text wird an Leerzeichen abgeschnitten. </gallery> </center> <br />"

--- a/wiki/de/Macro_FCCircularText.html
+++ b/wiki/de/Macro_FCCircularText.html
@@ -568,19 +568,17 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 </ul>
 </center>
 <p><br>
-</p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><br>
+</p><p><br>
 </p>
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_42.png&amp;filetimestamp=20150103205705&amp;.html" class="mw-file-description" title="Ring Internal curve with subtraction."><img alt="Ring Internal curve with subtraction." src="../File/FCCircularText_42.png" decoding="async" width="300" height="182" class="mw-file-element" data-file-width="442" data-file-height="268"></a></span></div>
-			<div class="gallerytext">Ring Internal curve with subtraction.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_42.png&amp;filetimestamp=20150103205705&amp;.html" class="mw-file-description" title="Ring Innenkurve mit Subtraktion."><img alt="Ring Innenkurve mit Subtraktion." src="../File/FCCircularText_42.png" decoding="async" width="300" height="182" class="mw-file-element" data-file-width="442" data-file-height="268"></a></span></div>
+			<div class="gallerytext">Ring Innenkurve mit Subtraktion.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_61.png&amp;filetimestamp=20180131135258&amp;.html" class="mw-file-description" title="Pivot character 0&deg;, 90&deg;, etc."><img alt="Pivot character 0&deg;, 90&deg;, etc." src="../File/FCCircularText_61.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Pivot character 0&deg;, 90&deg;, etc.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_61.png&amp;filetimestamp=20180131135258&amp;.html" class="mw-file-description" title="Drehpunkt 0&deg;, 90&deg; usw."><img alt="Drehpunkt 0&deg;, 90&deg; usw." src="../File/FCCircularText_61.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Drehpunkt 0&deg;, 90&deg; usw.</div>
 		</li>
 </ul>
 </center>
@@ -589,15 +587,13 @@ Wenn der Befehl in der ausgew&auml;hlten Option nicht verwendet wird, wird er au
 <center>
 <ul class="gallery mw-gallery-traditional">
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_Path_00_002_000.png&amp;filetimestamp=20210117155733&amp;.html" class="mw-file-description" title="Word The text is cutting on space character"><img alt="Word The text is cutting on space character" src="../File/FCCircularText_Path_00_002_000.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext"> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="../File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Word<span></span></span> The text is cutting on space character</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="../index.php?title=FCCircularText_Path_00_002_000.png&amp;filetimestamp=20210117155733&amp;.html" class="mw-file-description" title="Word Der Text wird an Leerzeichen abgeschnitten."><img alt="Word Der Text wird an Leerzeichen abgeschnitten." src="../File/FCCircularText_Path_00_002_000.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext"> <span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxTrue.svg&amp;filetimestamp=20200323161507&amp;.html" class="mw-file-description"><img src="../File/CheckBoxTrue.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Word<span></span></span> Der Text wird an Leerzeichen abgeschnitten.</div>
 		</li>
 </ul>
 </center>
 <p><br>
-</p>
-</div>
-<p><span id="Example_onto_Ellipse"></span>
+</p><p><span id="Example_onto_Ellipse"></span>
 </p>
 <h2><span class="mw-headline" id="Beispiel_auf_Ellipse">Beispiel auf Ellipse</span></h2>
 <center>
@@ -958,35 +954,35 @@ Modusentlastung:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120051338
+Cached time: 20260120051413
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.387 seconds
-Real time usage: 0.641 seconds
-Preprocessor visited node count: 1588/1000000
+CPU time usage: 0.384 seconds
+Real time usage: 0.549 seconds
+Preprocessor visited node count: 1587/1000000
 Post&#8208;expand include size: 41112/2097152 bytes
 Template argument size: 12832/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 66671/5000000 bytes
+Unstrip post&#8208;expand size: 66650/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  402.918      1 -total
-  2.33%    9.406      1 Template:Draft_Tools_navi/de
-  1.50%    6.049      7 Template:RadioButton
-  1.27%    5.100     10 Template:CheckBox
-  1.22%    4.914     10 Template:Code
-  1.11%    4.486      3 Template:ColoredText
-  1.00%    4.023      1 Template:Macro/de
-  0.96%    3.862     19 Template:Clear
-  0.88%    3.564      1 Template:Caption
-  0.87%    3.498      2 Template:Navigation_menu_2
+100.00%  341.138      1 -total
+  3.98%   13.593      1 Template:Draft_Tools_navi/de
+  2.13%    7.268      2 Template:Navigation_menu_2
+  1.66%    5.673      7 Template:RadioButton
+  1.50%    5.101     10 Template:Code
+  1.13%    3.859      1 Template:Userdocnavi/de
+  1.10%    3.755      1 Template:Macro/de
+  1.07%    3.656     10 Template:CheckBox
+  1.05%    3.572      3 Template:ColoredText
+  0.72%    2.470      1 Template:Codeextralink
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260120051337 and revision id 1741481. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391903-0!canonical and timestamp 20260120051413 and revision id 1741483. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
