--- a/wiki/de/Std_ProjectUtil.html
+++ b/wiki/de/Std_ProjectUtil.html
@@ -59,7 +59,7 @@
 <p>Mit dem Befehl <b>Std ProjektHilfsprogramm</b>  k&ouml;nnen Dateien aus einem FreeCAD-Dokument (<span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">*.FCStd</span>), das eigentlich eine <a rel="nofollow" class="external text" href="https://de.wikipedia.org/wiki/ZIP-Dateiformat">ZIP</a>-Datei ist, extrahiert werden und nach manueller Bearbeitung daraus ein neues Dokument erstellt werden.
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Project_utility_en.png&amp;filetimestamp=20131004204114&amp;.html" class="mw-file-description"><img src="../File/Project_utility_en.png" decoding="async" width="463" height="305" class="mw-file-element" data-file-width="463" data-file-height="305"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Das Dialogfeld Projekt-Hilfsprogramm</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Das Dialogfeld Dokument-Dienstprogramm</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Anwendung">Anwendung</span></h2>
@@ -157,15 +157,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120052957
+Cached time: 20260120053122
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.192 seconds
+CPU time usage: 0.110 seconds
+Real time usage: 0.163 seconds
 Preprocessor visited node count: 514/1000000
-Post&#8208;expand include size: 32900/2097152 bytes
-Template argument size: 12197/2097152 bytes
+Post&#8208;expand include size: 32904/2097152 bytes
+Template argument size: 12199/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -173,19 +173,19 @@ Unstrip post&#8208;expand size: 1759/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   34.240      1 -total
- 37.71%   12.913      1 Template:Std_Base_navi/de
- 17.63%    6.037      2 Template:Navigation_menu_2
- 13.63%    4.667      1 Template:GuiCommand/de
-  8.59%    2.942      1 Template:Userdocnavi/de
-  8.51%    2.914      2 Template:Docnav/de
-  8.50%    2.910      8 Template:Button
-  6.97%    2.387      6 Template:MenuCommand
-  6.33%    2.169      1 Template:Caption
-  4.79%    1.641      4 Template:FileName
+100.00%   32.995      1 -total
+ 34.73%   11.459      1 Template:Std_Base_navi/de
+ 20.22%    6.672      2 Template:Navigation_menu_2
+ 15.77%    5.203      6 Template:MenuCommand
+ 10.00%    3.299      2 Template:Docnav/de
+  9.66%    3.187      1 Template:GuiCommand/de
+  7.70%    2.541      1 Template:Userdocnavi/de
+  6.36%    2.097      8 Template:Button
+  5.99%    1.975      1 Template:Caption
+  5.37%    1.773      4 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210179-0!canonical and timestamp 20260120052956 and revision id 1741487. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210179-0!canonical and timestamp 20260120053122 and revision id 1741489. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
