--- a/wiki/de/Std_ProjectUtil.html
+++ b/wiki/de/Std_ProjectUtil.html
@@ -66,14 +66,14 @@
 <p><span id="Extract_Document"></span>
 </p>
 <h3><span class="mw-headline" id="Dokument_extrahieren">Dokument extrahieren</span></h3>
-<ol><li>Den Men&uuml;eintrag <b>Werkzeuge &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_ProjectUtil.svg&amp;filetimestamp=20240411193650&amp;.html" class="mw-file-description"><img src="../File/Std_ProjectUtil.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Dokument-Dienstprogramm...</b> ausw&auml;hlen.</li>
+<ol><li>Den Men&uuml;eintrag <b>Werkzeuge &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_ProjectUtil.svg&amp;filetimestamp=20240411193650&amp;.html" class="mw-file-description"><img src="../File/Std_ProjectUtil.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Dokument-Dienstprogramm</b> ausw&auml;hlen.</li>
 <li>Das Dialogfeld <b>Dokument-Dienstprogramm</b> wird ge&ouml;ffnet.</li>
-<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">...</span> rechts von <b>Dokument entpacken &rarr; Quelle</b> dr&uuml;cken.</li>
+<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">&hellip;</span> rechts von <b>Dokument entpacken &rarr; Quelle</b> dr&uuml;cken.</li>
 <li>Die <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">*.FCStd</span>-Datei ausw&auml;hlen, die bearbeitet werden soll.</li>
-<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">...</span> rechts von <b>Dokument entpacken &rarr; Zielort</b> dr&uuml;cken.</li>
-<li>Einen Ordner ausw&auml;hlen, in dem die Projektdatei extrahiert werden soll. Es ist ratsam, einen leeren Ordner zu w&auml;hlen.</li>
+<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">&hellip;</span> rechts von <b>Dokument entpacken &rarr; Zielort</b> dr&uuml;cken.</li>
+<li>Einen Ordner ausw&auml;hlen, in den das Dokument extrahiert werden soll. Es ist ratsam, einen leeren Ordner zu w&auml;hlen.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Entpacken</span> dr&uuml;cken.</li>
-<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Schlie&szlig;en</span>  dr&uuml;cken, um das Dialogfeld zu schlie&szlig;en.</li></ol>
+<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Schlie&szlig;en</span> dr&uuml;cken, um das Dialogfeld zu schlie&szlig;en.</li></ol>
 <p><span id="Manual_edits"></span>
 </p>
 <h3><span class="mw-headline" id="Manuelle_Bearbeitungen">Manuelle Bearbeitungen</span></h3>
@@ -157,15 +157,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120053139
+Cached time: 20260120053344
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.086 seconds
-Real time usage: 0.168 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.170 seconds
 Preprocessor visited node count: 514/1000000
-Post&#8208;expand include size: 32904/2097152 bytes
-Template argument size: 12199/2097152 bytes
+Post&#8208;expand include size: 32901/2097152 bytes
+Template argument size: 12196/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -173,19 +173,19 @@ Unstrip post&#8208;expand size: 1759/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   37.142      1 -total
- 35.00%   13.001      1 Template:Std_Base_navi/de
- 21.19%    7.872      2 Template:Navigation_menu_2
- 13.25%    4.921      6 Template:MenuCommand
- 12.00%    4.458      1 Template:GuiCommand/de
- 10.07%    3.741      1 Template:Userdocnavi/de
-  7.75%    2.879      2 Template:Docnav/de
-  6.84%    2.540      1 Template:Caption
-  5.67%    2.106      4 Template:FileName
-  5.46%    2.028      8 Template:Button
+100.00%   36.861      1 -total
+ 40.94%   15.092      1 Template:Std_Base_navi/de
+ 28.49%   10.502      2 Template:Navigation_menu_2
+ 13.01%    4.794      1 Template:GuiCommand/de
+ 10.71%    3.948      2 Template:Docnav/de
+ 10.04%    3.702      1 Template:Userdocnavi/de
+  6.84%    2.520      1 Template:Caption
+  5.74%    2.116      4 Template:FileName
+  4.55%    1.677      6 Template:MenuCommand
+  4.31%    1.589      8 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210179-0!canonical and timestamp 20260120053139 and revision id 1741491. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210179-0!canonical and timestamp 20260120053344 and revision id 1741493. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
