--- a/wiki/de/Std_ProjectUtil.html
+++ b/wiki/de/Std_ProjectUtil.html
@@ -77,7 +77,7 @@
 <p><span id="Manual_edits"></span>
 </p>
 <h3><span class="mw-headline" id="Manuelle_Bearbeitungen">Manuelle Bearbeitungen</span></h3>
-<p>Es ist wichtig zu erkennen, dass die Dateien innerhalb einer FreeCAD-Projektdatei miteinander verkn&uuml;pft sind. Nur die Bearbeitung einer einzelnen Datei f&uuml;hrt typischerweise zu Fehlern. Um konsistente Bearbeitungen &uuml;ber mehrere Dateien hinweg vorzunehmen, verwenden Sie einen guten Code-Editor, wie z.B. <a rel="nofollow" class="external text" href="https://notepad-plus-plus.org/">Notepad++</a> (f&uuml;r das Windows-Betriebssystem) oder <a rel="nofollow" class="external text" href="https://notepadqq.com/s/">Notepadqq</a> (f&uuml;r Linux-Betriebssysteme).
+<p>Es ist wichtig zu erkennen, dass die Dateien innerhalb eines FreeCAD-Dokuments miteinander verkn&uuml;pft sind. Nur die Bearbeitung einer einzelnen Datei f&uuml;hrt typischerweise zu Fehlern. Um konsistente Bearbeitungen &uuml;ber mehrere Dateien hinweg vorzunehmen, wird ein guter Code-Editor, wie z. B. <a rel="nofollow" class="external text" href="https://notepad-plus-plus.org/">Notepad++</a> (f&uuml;r das Windows-Betriebssystem), <a rel="nofollow" class="external text" href="https://notepadqq.com/s/">Notepadqq</a> (f&uuml;r Linux-Betriebssysteme) oder <a rel="nofollow" class="external text" href="https://vscodium.com/">VSCodium</a> (f&uuml;r Mac und andere) verwendet.
 </p><p><span id="Create_Document"></span>
 </p>
 <h3><span class="mw-headline" id="Projekt_erstellen">Projekt erstellen</span></h3>
@@ -157,12 +157,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120053344
+Cached time: 20260120054034
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.170 seconds
+CPU time usage: 0.115 seconds
+Real time usage: 0.368 seconds
 Preprocessor visited node count: 514/1000000
 Post&#8208;expand include size: 32901/2097152 bytes
 Template argument size: 12196/2097152 bytes
@@ -173,19 +173,19 @@ Unstrip post&#8208;expand size: 1759/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   36.861      1 -total
- 40.94%   15.092      1 Template:Std_Base_navi/de
- 28.49%   10.502      2 Template:Navigation_menu_2
- 13.01%    4.794      1 Template:GuiCommand/de
- 10.71%    3.948      2 Template:Docnav/de
- 10.04%    3.702      1 Template:Userdocnavi/de
-  6.84%    2.520      1 Template:Caption
-  5.74%    2.116      4 Template:FileName
-  4.55%    1.677      6 Template:MenuCommand
-  4.31%    1.589      8 Template:Button
+100.00%   71.333      1 -total
+ 67.76%   48.337      1 Template:Std_Base_navi/de
+ 56.09%   40.012      2 Template:Navigation_menu_2
+ 10.59%    7.557      1 Template:Userdocnavi/de
+  5.58%    3.983      1 Template:GuiCommand/de
+  5.12%    3.651      2 Template:Docnav/de
+  2.93%    2.087      4 Template:FileName
+  2.30%    1.640      8 Template:Button
+  1.84%    1.313      6 Template:MenuCommand
+  1.78%    1.270      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210179-0!canonical and timestamp 20260120053344 and revision id 1741493. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210179-0!canonical and timestamp 20260120054033 and revision id 1741497. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
