Updated page Std ProjectUtil/de

--- a/wiki/de/Std_ProjectUtil.html
+++ b/wiki/de/Std_ProjectUtil.html
@@ -81,11 +81,11 @@
 </p><p><span id="Create_Document"></span>
 </p>
 <h3><span class="mw-headline" id="Dokument_erstellen">Dokument erstellen</span></h3>
-<ol><li>Den Men&uuml;eintrag <b>Werkzeuge &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_ProjectUtil.svg&amp;filetimestamp=20240411193650&amp;.html" class="mw-file-description"><img src="../File/Std_ProjectUtil.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Dokument-Dienstprogramm...</b> ausw&auml;hlen.</li>
+<ol><li>Den Men&uuml;eintrag <b>Werkzeuge &rarr; <span typeof="mw:File"><a href="../index.php?title=Std_ProjectUtil.svg&amp;filetimestamp=20240411193650&amp;.html" class="mw-file-description"><img src="../File/Std_ProjectUtil.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Dokument-Dienstprogramm</b> ausw&auml;hlen.</li>
 <li>Das Dialogfeld <b>Dokument-Dienstprogramm</b> wird ge&ouml;ffnet.</li>
-<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">...</span> rechts von <b>Dokument erstellen&rarr; Quelle</b> dr&uuml;cken.</li>
+<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">&hellip;</span> rechts von <b>Dokument erstellen &rarr; Quelle</b> dr&uuml;cken.</li>
 <li>Die Datei <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">Document.xml</span> ausw&auml;hlen. Der Befehl wird automatisch alle verkn&uuml;pften Dateien finden.</li>
-<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">...</span> rechts von <b>Dokument erstellen &rarr;Zielort</b> dr&uuml;cken.</li>
+<li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">&hellip;</span> rechts von <b>Dokument erstellen &rarr; Zielort</b> dr&uuml;cken.</li>
 <li>Einen Ordner ausw&auml;hlen, in dem die neue Dokumentdatei erstellt werden soll.</li>
 <li>Die Schaltfl&auml;che <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Erstellen</span> dr&uuml;cken.</li>
 <li>Eine neue Dokumentdatei mit dem vorgegebenen Namen <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">project.fcstd</span> wird im gew&auml;hlten Ordner erstellt. Es erfolgt keine Warnung, wenn schon eine Datei mit diesem Namen vorhanden ist.</li>
@@ -157,15 +157,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120054052
+Cached time: 20260120054220
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.283 seconds
+CPU time usage: 0.092 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 514/1000000
-Post&#8208;expand include size: 32901/2097152 bytes
-Template argument size: 12196/2097152 bytes
+Post&#8208;expand include size: 32900/2097152 bytes
+Template argument size: 12195/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -173,19 +173,19 @@ Unstrip post&#8208;expand size: 1759/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.625      1 -total
- 28.59%   20.765      1 Template:Std_Base_navi/de
- 24.59%   17.859      1 Template:GuiCommand/de
- 11.47%    8.329      2 Template:Navigation_menu_2
-  9.82%    7.129      8 Template:Button
-  6.21%    4.512      2 Template:Docnav/de
-  5.75%    4.175      4 Template:FileName
-  5.27%    3.830      6 Template:MenuCommand
-  4.94%    3.586      1 Template:Caption
-  4.18%    3.034      1 Template:Userdocnavi/de
+100.00%   36.445      1 -total
+ 55.11%   20.084      1 Template:Std_Base_navi/de
+ 16.40%    5.976      2 Template:Navigation_menu_2
+ 10.11%    3.683      2 Template:Docnav/de
+  6.16%    2.245      1 Template:GuiCommand/de
+  5.92%    2.159      1 Template:Userdocnavi/de
+  5.02%    1.829      6 Template:MenuCommand
+  3.96%    1.444      8 Template:Button
+  3.90%    1.422      4 Template:FileName
+  3.87%    1.409      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210179-0!canonical and timestamp 20260120054052 and revision id 1741499. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:210179-0!canonical and timestamp 20260120054220 and revision id 1741501. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
