--- a/wiki/de/File_Format_FCStd.html
+++ b/wiki/de/File_Format_FCStd.html
@@ -126,7 +126,7 @@
 <p>Dies sind die <a href="http://en.wikipedia.org/wiki/Boundary_representation" class="extiw" title="wikipedia:Boundary representation">B-rep</a>-Formen aller Objekte, die eine Part-Form im <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">Document.xml</span> haben. Jedes Objekt, auch wenn es parametrisch ist, hat seine Form als individuelle <span style="font-weight:bold; font-family:monospace, Consolas, Courier New, Courier;">.brep</span>-Datei gespeichert, so dass Komponenten darauf zugreifen k&ouml;nnen, ohne die Form neu berechnen zu m&uuml;ssen.
 </p>
 <h3><span id=".2A.svg"></span><span class="mw-headline" id="*.svg">*.svg</span></h3>
-<p>Dies sind die SVG-Dateien, die als Vorlagen f&uuml;r <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>-Zeichnugsbl&auml;tter verwendet werden.
+<p>Dies sind die SVG-Dateien, die als Vorlagen f&uuml;r <a href="../de/TechDraw_Workbench.html" title="TechDraw Workbench/de">TechDraw</a>-Zeichnungsbl&auml;tter verwendet werden.
 </p><p><span id="Typical_structure"></span>
 </p>
 <h3><span class="mw-headline" id="Typische_Struktur">Typische Struktur</span></h3>
@@ -178,12 +178,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120055046
+Cached time: 20260120055159
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.063 seconds
-Real time usage: 0.100 seconds
+Real time usage: 0.090 seconds
 Preprocessor visited node count: 290/1000000
 Post&#8208;expand include size: 8287/2097152 bytes
 Template argument size: 6011/2097152 bytes
@@ -194,19 +194,19 @@ Unstrip post&#8208;expand size: 20685/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.923      1 -total
- 19.75%    3.540      2 Template:PropertyData/de
- 17.32%    3.104      1 Template:Userdocnavi/de
- 13.72%    2.460     16 Template:FileName
- 11.69%    2.096      2 Template:Incode
- 11.47%    2.056      1 Template:TOCright
-  9.23%    1.654      2 Template:Code
-  8.10%    1.451      1 Template:Clear
-  6.86%    1.230      2 Template:Variable
-  5.80%    1.039      1 Template:Navigation_menu_2
+100.00%   17.053      1 -total
+ 35.52%    6.057      2 Template:PropertyData/de
+ 15.48%    2.639      1 Template:Userdocnavi/de
+ 11.32%    1.931      2 Template:Code
+  9.97%    1.700      2 Template:Variable
+  9.13%    1.557     16 Template:FileName
+  7.73%    1.318      2 Template:Incode
+  6.76%    1.152      1 Template:Navigation_menu_2
+  6.48%    1.106      1 Template:TOCright
+  5.33%    0.909      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:197211-0!canonical and timestamp 20260120055046 and revision id 1741506. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:197211-0!canonical and timestamp 20260120055159 and revision id 1741508. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
