--- a/wiki/de/File_Format_FCStd.html
+++ b/wiki/de/File_Format_FCStd.html
@@ -148,7 +148,7 @@
 <p><span id="Embedding_other_files"></span>
 </p>
 <h2><span class="mw-headline" id="Andere_Dateien_einbetten">Andere Dateien einbetten</span></h2>
-<p>Um andere Dateitypen in eine FCStd-Datei einzubetten, muss zun&auml;chst ein <a href="../de/Scripted_objects.html" title="Scripted objects/de">skriptgeneriertes Objekt</a> in der <a href="../de/Python_console.html" class="mw-redirect" title="Python console/de">Python-Konsole</a> erstellt und ihm dann eine <code>App::PropertyFileIncluded</code>-Eigenschaft gegeben werden.
+<p>Um andere Dateitypen in eine FCStd-Datei einzubetten, muss zun&auml;chst ein <a href="../de/Scripted_objects.html" title="Scripted objects/de">skriptgeneriertes Objekt</a> in der <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> erstellt und ihm dann eine <code>App::PropertyFileIncluded</code>-Eigenschaft gegeben werden.
 </p><p>Anschlie&szlig;end kann in der <a href="../de/Property_View.html" title="Property View/de">Eigenschaften-Ansicht</a> der hinzugef&uuml;gten Eigenschaft eine Datei auf dem Computer zugeordnet werden. Wird die FCStd-Datei gespeichert, wird auch die der Eigenschaft <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>PropertyFileIncluded</b> zugewiesene Datei in das <code>.FCStd</code>-Dokument gepackt. Wenn das Dokument wiederhergestellt wird, wird dieselbe Datei mit der Eigenschaft <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>PropertyFileIncluded</b> auch wiederhergestellt.
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">custom_obj</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"CustomObject"</span><span class="p">)</span>
@@ -178,12 +178,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120055243
+Cached time: 20260120055319
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.072 seconds
-Real time usage: 0.206 seconds
+Real time usage: 0.117 seconds
 Preprocessor visited node count: 290/1000000
 Post&#8208;expand include size: 8287/2097152 bytes
 Template argument size: 6011/2097152 bytes
@@ -194,19 +194,19 @@ Unstrip post&#8208;expand size: 20685/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   53.673      1 -total
- 40.56%   21.769      2 Template:PropertyData/de
- 18.05%    9.686      1 Template:TOCright
- 12.72%    6.828      1 Template:Userdocnavi/de
-  9.34%    5.013      2 Template:Variable
-  8.21%    4.406      2 Template:Code
-  6.74%    3.620      2 Template:Incode
-  5.34%    2.868     16 Template:FileName
-  4.06%    2.181      1 Template:Clear
-  3.67%    1.971      1 Template:Navigation_menu_2
+100.00%   22.225      1 -total
+ 24.31%    5.403      2 Template:PropertyData/de
+ 20.10%    4.467      1 Template:Userdocnavi/de
+ 12.88%    2.862      2 Template:Code
+ 10.84%    2.410      1 Template:TOCright
+ 10.68%    2.373      2 Template:Variable
+  9.62%    2.139     16 Template:FileName
+  8.69%    1.931      2 Template:Incode
+  7.60%    1.689      1 Template:Navigation_menu_2
+  5.00%    1.111      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:197211-0!canonical and timestamp 20260120055243 and revision id 1741510. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:197211-0!canonical and timestamp 20260120055319 and revision id 1741512. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
