--- a/wiki/File_Format_FCStd.html
+++ b/wiki/File_Format_FCStd.html
@@ -141,7 +141,7 @@
  &nbsp;:--etc.
 </pre>
 <h2><span class="mw-headline" id="Embedding_other_files">Embedding other files</span></h2>
-<p>In order to embed other file types inside a FCStd file, you must first create a <a href="Scripted_objects.html" title="Scripted objects">scripted object</a> from the <a href="Python_console.html" class="mw-redirect" title="Python console">Python console</a>, and give it an <code>App::PropertyFileIncluded</code> property.
+<p>In order to embed other file types inside a FCStd file, you must first create a <a href="Scripted_objects.html" title="Scripted objects">scripted object</a> from the <a href="Python_Console.html" title="Python Console">Python Console</a>, and give it an <code>App::PropertyFileIncluded</code> property.
 </p><p>Then in the <a href="Property_View.html" title="Property View">Property View</a> you can go to the added property and choose a file in the computer. Once the FCStd file is saved, the file assigned to the <span style="font-size:60%; padding-right:0.8em;">Data</span><b>PropertyFileIncluded</b> property will be packed inside the <code>.FCStd</code>. When the document is restored, the same file will be restored with the <span style="font-size:60%; padding-right:0.8em;">Data</span><b>PropertyFileIncluded</b> property.
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">custom_obj</span> <span class="o">=</span> <span class="n">App</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"CustomObject"</span><span class="p">)</span>
@@ -170,12 +170,12 @@
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260120054650
+Cached time: 20260120055400
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.099 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.088 seconds
 Preprocessor visited node count: 406/1000000
 Post&#8208;expand include size: 7683/2097152 bytes
 Template argument size: 5701/2097152 bytes
@@ -186,19 +186,19 @@ Unstrip post&#8208;expand size: 20688/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.415      1 -total
- 24.50%    4.266      2 Template:PropertyData
- 24.36%    4.242      1 Template:Userdocnavi
- 15.51%    2.701      2 Template:Variable
- 14.63%    2.547      1 Template:Navigation_menu_2
- 13.58%    2.364      2 Template:Code
-  7.97%    1.387      2 Template:Incode
-  7.74%    1.348     16 Template:FileName
-  6.14%    1.069      1 Template:TOCright
-  6.06%    1.056      1 Template:Clear
+100.00%   12.492      1 -total
+ 21.51%    2.687      1 Template:Userdocnavi
+ 19.48%    2.434      2 Template:PropertyData
+ 16.24%    2.029      2 Template:Code
+ 13.57%    1.695      1 Template:Navigation_menu_2
+ 11.54%    1.441      2 Template:Variable
+ 10.21%    1.276     16 Template:FileName
+  7.92%    0.990      1 Template:TOCright
+  7.65%    0.956      2 Template:Incode
+  5.40%    0.674      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:581-0!canonical and timestamp 20260120054707 and revision id 1741502. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:581-0!canonical and timestamp 20260120055404 and revision id 1741513. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
