--- a/wiki/ru/Interface_Customization.html
+++ b/wiki/ru/Interface_Customization.html
@@ -4,15 +4,15 @@
 <li><a href="../Interface_Customization.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Interface Customization (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../tr/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--low" title="Aray&uuml;z &Ouml;zelle&#351;tirme (1% translated)" lang="tr" dir="ltr">T&uuml;rk&ccedil;e</a></li>
 <li><a href="../es/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--med" title="Personalizaci&oacute;n del interfaz (47% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><a href="../fr/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--high" title="Personnalisation de l'interface (99% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--complete" title="Personnalisation de l'interface (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../hr/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--med" title="Prilago&#273;avanje su&#269;elja (15% translated)" lang="hr" dir="ltr">hrvatski</a></li>
 <li><a href="../it/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--complete" title="Personalizzare l'interfaccia (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--complete" title="Dostosowywanie interfejsu u&#380;ytkownika do w&#322;asnych potrzeb (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--low" title="Interface Customization (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
-<li><a href="../pt-br/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--med" title="Personaliza&ccedil;&atilde;o da interface (18% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
+<li><a href="../pt-br/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--med" title="Personaliza&ccedil;&atilde;o da interface (19% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--low" title="Personalizarea interfe&#355;ei (1% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../sv/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--low" title="Interface Customization (1% translated)" lang="sv" dir="ltr">svenska</a></li>
-<li><a href="../cs/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; nastaven&iacute; (1% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
+<li><a href="../cs/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--low" title="P&#345;izp&#367;soben&iacute; u&#382;ivatelsk&eacute;ho rozhran&iacute; (1% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
 <li><a href="../bg/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--low" title="&#1053;&#1072;&#1089;&#1090;&#1088;&#1086;&#1081;&#1082;&#1080; &#1085;&#1072; &#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072; (1% translated)" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</span></li>
 <li><a href="../uk/Interface_Customization.html" class="mw-pt-progress mw-pt-progress--low" title="Interface Customization (1% translated)" lang="uk" dir="ltr">&#1091;&#1082;&#1088;&#1072;&#1111;&#1085;&#1089;&#1100;&#1082;&#1072;</a></li>
@@ -262,35 +262,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20251009130055
+Cached time: 20260120065043
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.164 seconds
-Real time usage: 0.182 seconds
+CPU time usage: 0.147 seconds
+Real time usage: 0.247 seconds
 Preprocessor visited node count: 625/1000000
 Post&#8208;expand include size: 40663/2097152 bytes
 Template argument size: 12107/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 4143/5000000 bytes
+Unstrip post&#8208;expand size: 4165/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   29.875      1 -total
- 19.50%    5.825      1 Template:Std_Base_navi/ru
- 15.43%    4.610      1 Template:Interface_navi/ru
-  9.61%    2.872      2 Template:Docnav/ru
-  8.14%    2.432     10 Template:Value
-  6.07%    1.815      7 Template:Top
-  5.90%    1.764      1 Template:Userdocnavi/ru
-  5.24%    1.567      4 Template:FileName
-  4.59%    1.370      3 Template:Navigation_menu_2
-  4.51%    1.346     22 Template:Button
+100.00%   44.815      1 -total
+ 14.80%    6.632      1 Template:Std_Base_navi/ru
+ 10.59%    4.745      1 Template:TOCright
+  9.27%    4.154     10 Template:Value
+  9.08%    4.069      4 Template:Caption
+  8.44%    3.783      7 Template:Top
+  7.73%    3.466      2 Template:Docnav/ru
+  7.35%    3.296      1 Template:Interface_navi/ru
+  6.09%    2.731      2 Template:MenuCommand
+  5.55%    2.486     22 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:983-0!canonical and timestamp 20251009130055 and revision id 1657370. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:983-0!canonical and timestamp 20260120065043 and revision id 1657370. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
