Please use the forum for such questions: https://forum.freecad.org/

--- a/wiki/Talk;Impostare_dimensioni_a_un_rettangolo.html
+++ b/wiki/Talk;Impostare_dimensioni_a_un_rettangolo.html
@@ -1,29 +1,2 @@
-<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Talk:Impostare dimensioni a un rettangolo</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-heading mw-heading2 ext-discussiontools-init-section"><!--__DTSUBSCRIBEBUTTONDESKTOP__{&quot;headingLevel&quot;:2,&quot;name&quot;:&quot;h-Ennio-20260119103200&quot;,&quot;type&quot;:&quot;heading&quot;,&quot;level&quot;:0,&quot;id&quot;:&quot;h-Comandi_basilari_per_un_principiante-20260119103200&quot;,&quot;replies&quot;:[&quot;c-Ennio-20260119103200-Comandi_basilari_per_un_principiante&quot;],&quot;text&quot;:&quot;Comandi basilari per un principiante&quot;,&quot;linkableTitle&quot;:&quot;Comandi basilari per un principiante&quot;}--><h2 data-mw-thread-id="h-Comandi_basilari_per_un_principiante-20260119103200"><span class="mw-headline" id="Comandi_basilari_per_un_principiante"><span data-mw-comment-start="" id="h-Comandi_basilari_per_un_principiante-20260119103200"></span>Comandi basilari per un principiante<span data-mw-comment-end="h-Comandi_basilari_per_un_principiante-20260119103200"></span></span></h2><div class="ext-discussiontools-init-section-bar"><div class="ext-discussiontools-init-section-metadata"><span class="ext-discussiontools-init-section-metaitem ext-discussiontools-init-section-timestampLabel">Latest comment: <a href="#c-Ennio-20260119103200-Comandi_basilari_per_un_principiante">just now</a></span><span class="ext-discussiontools-init-section-metaitem ext-discussiontools-init-section-commentCountLabel">1 comment</span><span class="ext-discussiontools-init-section-metaitem ext-discussiontools-init-section-authorCountLabel">1 person in discussion</span></div><div class="ext-discussiontools-init-section-actions"><!--__DTSUBSCRIBEBUTTONMOBILE__{&quot;headingLevel&quot;:2,&quot;name&quot;:&quot;h-Ennio-20260119103200&quot;,&quot;type&quot;:&quot;heading&quot;,&quot;level&quot;:0,&quot;id&quot;:&quot;h-Comandi_basilari_per_un_principiante-20260119103200&quot;,&quot;replies&quot;:[&quot;c-Ennio-20260119103200-Comandi_basilari_per_un_principiante&quot;],&quot;text&quot;:&quot;Comandi basilari per un principiante&quot;,&quot;linkableTitle&quot;:&quot;Comandi basilari per un principiante&quot;}--></div></div></div>
-<p><span data-mw-comment-start="" id="c-Ennio-20260119103200-Comandi_basilari_per_un_principiante"></span>Salve, qualcuno mi pu&ograve; indicare come imparare i comandi basilari per il disegno architettonico? <a href="index.php?title=User;Ennio&amp;action=edit&amp;redlink=1.html" class="new" title="User:Ennio (page does not exist)">Ennio</a> (<a href="index.php?title=User_talk;Ennio&amp;action=edit&amp;redlink=1.html" class="new" title="User talk:Ennio (page does not exist)">talk</a>) <a href="http://wiki.freecad.org/Talk:Impostare_dimensioni_a_un_rettangolo#c-Ennio-20260119103200-Comandi_basilari_per_un_principiante" class="ext-discussiontools-init-timestamplink">10:32, 19 January 2026 (UTC)</a><span class="ext-discussiontools-init-replylink-buttons" data-mw-thread-id="c-Ennio-20260119103200-Comandi_basilari_per_un_principiante"><span id="ooui-php-1" class="ext-discussiontools-init-replybutton oo-ui-widget oo-ui-widget-enabled oo-ui-buttonElement oo-ui-buttonElement-frameless oo-ui-labelElement oo-ui-flaggedElement-progressive oo-ui-buttonWidget" data-ooui='{"_":"OO.ui.ButtonWidget","rel":["nofollow"],"framed":false,"label":"Reply","flags":["progressive"],"classes":["ext-discussiontools-init-replybutton"]}'><a role="button" tabindex="0" rel="nofollow" class="oo-ui-buttonElement-button"><span class="oo-ui-iconElement-icon oo-ui-iconElement-noIcon oo-ui-image-progressive"></span><span class="oo-ui-labelElement-label">Reply</span><span class="oo-ui-indicatorElement-indicator oo-ui-indicatorElement-noIndicator oo-ui-image-progressive"></span></a></span></span><span data-mw-comment-end="c-Ennio-20260119103200-Comandi_basilari_per_un_principiante"></span>
-</p>
-<!-- 
-NewPP limit report
-Cached time: 20260119103219
-Cache expiry: 86400
-Reduced expiry: false
-Complications: [user&#8208;signature]
-DiscussionTools time usage: 0.003 seconds
-CPU time usage: 0.004 seconds
-Real time usage: 0.007 seconds
-Preprocessor visited node count: 2/1000000
-Post&#8208;expand include size: 0/2097152 bytes
-Template argument size: 0/2097152 bytes
-Highest expansion depth: 2/100
-Expensive parser function count: 0/100
-Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 0/5000000 bytes
--->
-<!--
-Transclusion expansion time report (%,ms,calls,template)
-100.00%    0.000      1 -total
--->
-
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411884-0!canonical and timestamp 20260119103219 and revision id 1740939. Rendering was triggered because: edit-page
- -->
-</div>
+<link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Talk:Impostare dimensioni a un rettangolo</span></h1><?xml encoding="UTF-8">
 </div><script src="site.js"></script>
