Created page with "==Installazione=="

--- a/wiki/it/Macro_Overlap.html
+++ b/wiki/it/Macro_Overlap.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Overlap/it</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="it" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Overlap&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--med" title="Makro &Uuml;berlappung (27% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro &Uuml;berlappung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Overlap.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Overlap (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><a href="../fr/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Chevauchement (55% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="../fr/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Chevauchement (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
-<li><a href="../pl/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--med" title="Makrodefinicja: Nak&#322;adka (55% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><a href="../pl/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Nak&#322;adka (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -75,12 +75,11 @@ Sovrapposizione Booleana
 <p><span typeof="mw:File"><a href="../index.php?title=Macro_Boolean_Overlap_Screenshot.png&amp;filetimestamp=20161012181805&amp;.html" class="mw-file-description"><img src="../File/Macro_Boolean_Overlap_Screenshot.png" decoding="async" width="1000" height="470" class="mw-file-element" data-file-width="1305" data-file-height="613"></a></span>
 </p><p>Sovrapposizione Booleana costruisce una forma che copre lo spazio occupato da non meno del 'OverlapIndex' forme. 'OverlapIndex' &egrave; una propriet&agrave; che pu&ograve; essere modificata. Il valore 1 fornisce il risultato equivalente a <a href="../it/Part_Fuse.html" title="Part Fuse/it">Part Unione</a>. Il valore pari al numero di forme rende lo strumento equivalente a <a href="../it/Part_Common.html" title="Part Common/it">Part Intersezione</a>. Il valore predefinito &egrave; 2, vale a dire il risultato riempie lo spazio in cui non vi &egrave; alcuna sovrapposizione.
 </p><p>Richiede FreeCAD v0.17+ costruito su OCC non inferiore a 6.9.0 (provato con 7.0.0).
+</p><p><span id="Installation"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Installation">Installation</span></h2>
-</div>
-<div class="mw-translate-fuzzy">
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
+<div class="mw-translate-fuzzy">
+<h2><span class="mw-headline" id="Installazione_2">Installazione</span></h2>
 <p>Scaricare il file MacroOverlap.py e salvarlo nella directory delle macro:
 </p>
 </div>
@@ -268,28 +267,28 @@ def run():
         mb.exec_()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20251022190608
+Cached time: 20260120104814
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.048 seconds
-Real time usage: 0.072 seconds
+CPU time usage: 0.036 seconds
+Real time usage: 0.088 seconds
 Preprocessor visited node count: 105/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 6787/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7469/5000000 bytes
+Unstrip post&#8208;expand size: 7487/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    3.837      1 -total
- 60.31%    2.314      1 Template:Macro/it
- 35.79%    1.373      1 Template:MacroCode
+100.00%    8.058      1 -total
+ 50.92%    4.103      1 Template:Macro/it
+ 47.28%    3.810      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20251022190608 and revision id 1673566. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120104813 and revision id 1741517. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
