Updated page Macro Overlap/it

--- a/wiki/it/Macro_Overlap.html
+++ b/wiki/it/Macro_Overlap.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro &Uuml;berlappung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Overlap.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Overlap (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Chevauchement (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Overlap.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Nak&#322;adka (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -78,12 +78,8 @@ Sovrapposizione Booleana
 </p><p><span id="Installation"></span>
 </p>
 <h2><span class="mw-headline" id="Installazione">Installazione</span></h2>
-<div class="mw-translate-fuzzy">
-<h2><span class="mw-headline" id="Installazione_2">Installazione</span></h2>
-<p>Scaricare il file MacroOverlap.py e salvarlo nella directory delle macro:
-</p>
-</div>
-<p><a rel="nofollow" class="external free" href="https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Overlap/MacroOverlap.py">https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Overlap/MacroOverlap.py</a>
+<p>Scaricare il file MacroOverlap.py e salvarlo nella cartella delle macro:
+</p><p><a rel="nofollow" class="external free" href="https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Overlap/MacroOverlap.py">https://github.com/DeepSOIC/FreeCAD-Macros/raw/master/Overlap/MacroOverlap.py</a>
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="How_to_use">How to use</span></h2>
@@ -267,28 +263,28 @@ def run():
         mb.exec_()</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260120104814
+Cached time: 20260120104826
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.036 seconds
-Real time usage: 0.088 seconds
-Preprocessor visited node count: 105/1000000
+CPU time usage: 0.035 seconds
+Real time usage: 0.053 seconds
+Preprocessor visited node count: 101/1000000
 Post&#8208;expand include size: 1989/2097152 bytes
 Template argument size: 6787/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 7487/5000000 bytes
+Unstrip post&#8208;expand size: 7488/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.058      1 -total
- 50.92%    4.103      1 Template:Macro/it
- 47.28%    3.810      1 Template:MacroCode
+100.00%    5.485      1 -total
+ 58.98%    3.235      1 Template:Macro/it
+ 38.70%    2.123      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120104813 and revision id 1741517. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:74800-0!canonical and timestamp 20260120104826 and revision id 1741519. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
