Created page with "Icona barra degli strumenti [[Image:Image_Scaling.svg]]"

--- a/wiki/it/Macro_Image_Scaling.html
+++ b/wiki/it/Macro_Image_Scaling.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro BildSkalierung (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_Image_Scaling.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Image Scaling (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Image Scaling (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_Image_Scaling.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Skalowanie obraz&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -89,11 +89,8 @@ Scala immagine
 <li>Inserire in mm la distanza vera tra i punti nel campo di testo del dialogo e fare clic su OK</li>
 <li>L'immagine viene ridimensionata e il dialogo si chiude.</li></ul>
 <h2><span class="mw-headline" id="Script">Script</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>ToolBar Icon <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Image_Scaling.svg&amp;filetimestamp=20181206021928&amp;.html" class="mw-file-description"><img src="../File/Image_Scaling.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
-</p>
-</div>
-<p><b>Macro_Image_Scaling.FCMacro</b>
+<p>Icona barra degli strumenti <span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Image_Scaling.svg&amp;filetimestamp=20181206021928&amp;.html" class="mw-file-description"><img src="../File/Image_Scaling.svg" decoding="async" width="64" height="64" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
+</p><p><b>Macro_Image_Scaling.FCMacro</b>
 </p>
 <pre>import FreeCADGui, FreeCAD, Part
 import math
@@ -232,28 +229,28 @@ ui.setupUi(d)</pre>
 <li><a rel="nofollow" class="external text" href="https://youtu.be/2iFE40uHrA8">Movie created by microelly2</a></li></ul>
 <!-- 
 NewPP limit report
-Cached time: 20260120105254
+Cached time: 20260120105306
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.052 seconds
-Preprocessor visited node count: 96/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.047 seconds
+Preprocessor visited node count: 95/1000000
 Post&#8208;expand include size: 1902/2097152 bytes
 Template argument size: 5930/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6777/5000000 bytes
+Unstrip post&#8208;expand size: 6781/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.600      1 -total
- 61.12%    3.423      1 Template:Macro/it
- 37.05%    2.075      1 Template:MacroCode
+100.00%    5.060      1 -total
+ 61.80%    3.127      1 Template:Macro/it
+ 35.93%    1.818      1 Template:MacroCode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105254 and revision id 1741533. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:63612-0!canonical and timestamp 20260120105306 and revision id 1741535. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
